# work-harvest

./: .gitignore  AGENTS.md  Cargo.toml  README.md  design-qa.md  package.json  pnpm-lock.yaml
.github/: pull_request_template.md
.github/workflows/: release-macos.yml
adapters/codex/record-work/: SKILL.md
adapters/codex/record-work/agents/: openai.yaml
adapters/codex/record-work/references/: collection-quality.md  payloads.md
adapters/codex/record-work/scripts/: wh
apps/desktop/: index.html  package.json
apps/desktop/src/: AlwaysOnStatus.tsx  App.tsx  CheckpointDetails.tsx  CheckpointEditor.tsx  PerformanceNoteEditor.tsx  WeeklyReportEditor.tsx  WorkItemDiffReview.tsx  WorkItemEditor.tsx  WriteDiffReview.tsx  desktop.ts  main.tsx  styles.css  useSnapshotNotifications.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.bundle.conf.json  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: always_on.rs  lib.rs  main.rs
apps/desktop/src/features/checkpoint/: CheckpointStepper.tsx
apps/desktop/src/features/dashboard/: Dashboard.tsx  DetailList.tsx  EditorHost.tsx  SystemOverview.tsx  TrashPage.tsx  WorkDateNavigation.tsx  WorkItemBrowser.tsx  WorkItemDetailPanel.tsx  WorkspaceEnvironmentMenu.tsx  presentation.ts  useWorkspaceController.ts  workItemDates.ts
apps/desktop/src/styles/: layout.css  primitives.css  theme.css  tokens.css  typeset.css
apps/desktop/src/ui/: Button.tsx  EditorDialog.tsx  IconButton.tsx  ProjectCombobox.tsx  SelectMenu.tsx  TokenInput.tsx  formValidation.ts
crates/work-harvest-cli/: Cargo.toml
crates/work-harvest-cli/src/: main.rs
crates/work-harvest-cli/tests/: cli_compat.rs
crates/work-harvest-core/: Cargo.toml
crates/work-harvest-core/src/: checkpoints.rs  lib.rs  queries.rs  reports.rs  schema.rs  work_items.rs  write.rs
crates/work-harvest-write-helper/: Cargo.toml
crates/work-harvest-write-helper/src/: main.rs
crates/work-harvest-write-helper/tests/: node_interop.rs
design-audit-artifacts/2026-07-16/: audit.md
design-audit-artifacts/2026-07-16-final-regression/: audit.md
design-audit-artifacts/2026-07-16-typography/: audit.md
docs/: cli.md  confidentiality-policy.md  data-model.md  desktop-app-plan.md  distribution.md  usage-scenarios.md  weekly-report.md  work-method.md
docs/adr/: 0001-tauri-desktop-app.md  0002-recoverable-local-write-transactions.md
examples/records/2026/07/13/: CP-20260713-001.json  CP-20260713-001.md
examples/reports/: performance-note-contract.md
examples/work-items/AUTH-142/: context.json  context.md  work-item.json
schemas/: checkpoint.schema.json  common.schema.json  work-context.schema.json  work-item.schema.json
scripts/: prepare-tauri-sidecar.mjs  verify-macos-bundle.mjs  verify-release-version.mjs
src/: checkpoints.js  cli.js  errors.js  io.js  paths.js  queries.js  reports.js  rust-writer.js  schema-validator.js  time.js  validate-data.js  work-items.js
templates/: checkpoint.md  performance-note.md  work-item-context.md
test/: cli.test.js  distribution.test.js
