[workspace]
members = [
  "apps/desktop/src-tauri",
  "crates/work-harvest-core",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
notify = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = "2"
tauri-build = "2"
tauri-plugin-dialog = "2"
tempfile = "3"
thiserror = "2"
walkdir = "2"
