[package]
name = "work-harvest-core"
version = "0.1.0"
description = "Shared local data core for Work Harvest"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
jsonschema.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
