[package]
name = "work-harvest-desktop"
version = "0.1.0"
description = "Work Harvest desktop application"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "work_harvest_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
notify.workspace = true
serde.workspace = true
tauri.workspace = true
tauri-plugin-dialog.workspace = true
tauri-plugin-notification.workspace = true
tauri-plugin-opener.workspace = true
tauri-plugin-window-state.workspace = true
work-harvest-core = { path = "../../../crates/work-harvest-core" }
